--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -191,30 +191,32 @@
   z-index: -1;
   overflow: hidden;
 
-  &::before {
-    position: fixed;
-    top: 0px;
-    left: 0%;
-    content: "";
-    height: 100%;
-    width: 150px;
-    background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, rgba(255, 255, 255, 0)), to(#000));
-    background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 30%, #000 100%);
-    background: linear-gradient(-90deg, rgba(255, 255, 255, 0) 30%, #000 100%);
-    z-index: 50;
-  }
-
-  &::after {
-    position: fixed;
-    top: 0px;
-    right: 0%;
-    content: "";
-    height: 100%;
-    width: 150px;
-    background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, rgba(255, 255, 255, 0)), to(#000));
-    background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 30%, #000 100%);
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 30%, #000 100%);
-    z-index: 50;
+  @media (min-width: 1170px) {
+    &::before {
+      position: fixed;
+      top: 0px;
+      left: 0%;
+      content: "";
+      height: 100%;
+      width: 150px;
+      background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, rgba(255, 255, 255, 0)), to(#000));
+      background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 30%, #000 100%);
+      background: linear-gradient(-90deg, rgba(255, 255, 255, 0) 30%, #000 100%);
+      z-index: 50;
+    }
+  
+    &::after {
+      position: fixed;
+      top: 0px;
+      right: 0%;
+      content: "";
+      height: 100%;
+      width: 150px;
+      background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, rgba(255, 255, 255, 0)), to(#000));
+      background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 30%, #000 100%);
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 30%, #000 100%);
+      z-index: 50;
+    }
   }
 }
 
