--- a/src/pug/layouts/page-layout.pug
+++ b/src/pug/layouts/page-layout.pug
@@ -15,6 +15,7 @@ html(lang="ru")
         link(rel="stylesheet", href="./libs/css/owl.theme.default.min.css")
 
     body(class=pageClass)
+        include ../sections/preloader.pug
         .page
             .page__background
                 .page__background-wrap
